# resume-gen

./: .gitignore  Makefile  README.md  pyproject.toml
refresh/: auto.vim  reload-browser
resume/: generate.py  resume.md  style.css
