[tool.poetry]
name = "resume"
version = "0.1.0"
description = "My personal resume generator based on resume.md"
authors = ["nm <nagamocha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
Markdown = "^3.3.7"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^4.1.1"
flake8-pytest-style = "^1.6.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = [".venv/", ".git/"]
assert_used = { skips = ["*/test_*.py", "*/test_*.py", "*/conftest.py"] }
